@@ -1,0 +1,6 @@
+[
+	{
+		"name": "VIZ_TOTL_UNIT",
+		"value": "1:80|Celcius"
+	}
+]
