@@ -1,0 +1,10 @@
+[
+	{
+		"name": "VIZ_UNITS",
+		"value": "2:Arbitary Units"
+	},
+	{
+		"name": "VIZ_TOTAL",
+		"value": "2:60"
+	}
+]
