@@ -1,0 +1,10 @@
+[
+	{
+		"name": "VIZ_ICONS",
+		"value": "0:0|star"
+	},
+	{
+		"name": "VIZ_ICONS",
+		"value": "0:1|star-o"
+	}
+]
