@@ -1,0 +1,10 @@
+[
+	{
+		"name": "VIZ_TOTL_UNIT",
+		"value": "0:800|Lumen M^2"
+	},
+	{
+		"name": "VIZ_IS_SERIES",
+		"value": "0:false"
+	}
+]
