@@ -1,9 +1,7 @@
-<!-- THE FOLLOWING IS AN EXAMPLE OF EXTERNAL REFERENCES - HOST ON THE SERVER THAT AssimilateCrouton IS HOSTED ON -->
-
-<link rel="import" href="http://localhost:10001/static/common/bower/polymer/polymer.html" />
-<link rel="import" href="http://localhost:10001/html/crouton-card.html" />
-<link rel="import" href="http://localhost:10001/static/common/bower/paper-listbox/paper-listbox.html" />
-<link rel="import" href="http://localhost:10001/static/common/bower/paper-item/paper-item.html" />
+<link rel="import" href="../static/common/bower/paper-listbox/paper-listbox.html" onerror="corsLinkOnError(this.href)" />
+<link rel="import" href="../static/common/bower/polymer/polymer.html" onerror="corsLinkOnError(this.href)" />
+<link rel="import" href="../html/crouton-card.html"  onerror="corsLinkOnError(this.href)" />
+<link rel="import" href="../static/common/bower/paper-item/paper-item.html" onerror="corsLinkOnError(this.href)" />
 <dom-module id="assim-weekview">
     <template>
         <link rel="stylesheet" href="assim-weekview.css" />
@@ -19,7 +17,9 @@
                 <template is="dom-if" if="{{info}}">
                     <i class="info_button fa fa-info-circle" title="info" on-click="_makeToast"></i>
                 </template>
-                <i class="close_button fa fa-window-close" title="hide" on-click="_hideCard"></i>
+                <template is="dom-if" if="{{isDeviceCardLoaded}}">
+                    <i class="close_button fa fa-window-close" title="hide" on-click="_hideCard"></i>
+                </template>
             </div>
             <div class="expand">
                 <!--ToDo: create wwebcomponents for reused controls - id, selected-values, on-selected-values-changed, items -->
@@ -134,13 +134,16 @@
                     intervalHourIncrement: Number,
                     intervalHourDivisions: Number,
                     info: String,
-                    isInternalUpdate: Boolean
+                    isInternalUpdate: Boolean,
+                    isDeviceCardLoaded: Boolean
                 },
                 observers: [
                     'newValues(endPointJson.values.*)'
                 ],
                 ready: function () {
-                    this.getSelectionsFromStorage();
+                    var that = this;
+                    // delay state selection because embedded libraries may need to be loaded twice (one with a 404)
+                    setTimeout(function () { that.getSelectionsFromStorage() }, 500);
                 },
                 attached: function () {
                     this.endPointName = this.endPointJson.endPointName;
@@ -148,6 +151,8 @@
                         this.info = this.endPointJson.info;
                     }
                     this.mqtt = document.getElementById("crouton-mqtt");
+                    var deviceSelector = "assim-device[id^=crouton-" + this.deviceName + "]";
+                    this.isDeviceCardLoaded = document.querySelector(deviceSelector);
                 },
                 // MQTT values changed event
                 newValues: function (changeRecord) {//{"value": true}
